# discord-bridge

./: .dockerignore  Dockerfile  LICENSE  README.md  config.example.yaml  pyproject.toml
.github/workflows/: ci.yml
src/discord_bridge/: __init__.py  config.py  gateway.py  main.py  router.py
tests/: test_config.py
